# amd-bin

./: .gitignore  BinGen.cpp  BinGen.hpp  CMakeLists.txt  CMakeSettings.json  OclLib.cpp  README.md  b.bat  b.sh  launch.vs.json  main.cpp
